<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_catalog">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.tepiapp.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_predict"
        android:name="com.example.tepiapp.ui.predict.PredictFragment"
        android:label="@string/title_predict"
        tools:layout="@layout/fragment_predict" />

    <fragment
        android:id="@+id/navigation_save"
        android:name="com.example.tepiapp.ui.save.SaveFragment"
        android:label="@string/title_save"
        tools:layout="@layout/fragment_save" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tepiapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>
</navigation>