<android.widget.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/splash_screen"
            android:contentDescription="@string/app_logo"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/resetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:gravity="start" />

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</android.widget.ScrollView>
